force-app/main/default/objects/Appointment_Focus_Area_Mapping__mdt/Appointment_Focus_Area_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping between the Focus Area and appointment type</description>
    <label>Appointment Focus Area Mapping</label>
    <pluralLabel>Appointment Focus Area Mappings</pluralLabel>
</CustomObject>