force-app/main/default/objects/Appointment_Focus_Area_Mapping__mdt/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Appointment Type picklist values to be picked from Interaction.Interaction_Purpose__c</description>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Wellbeing</fullName>
                <default>true</default>
                <label>Financial Wellbeing</label>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Test Out a Home Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>