force-app/main/default/objects/Appointment_Focus_Area_Mapping__mdt/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>To define that the mapping is valid or not</description>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>