force-app/main/default/objects/Appointment_Focus_Area_Mapping__mdt/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Focus Area picklist values to be picked from InteractionFocus_Area__c</description>
    <label>Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reach your savings goals</fullName>
                <default>true</default>
                <label>Reach your savings goals</label>
            </value>
            <value>
                <fullName>Improve your habits</fullName>
            </value>
            <value>
                <fullName>Plan upcoming expenses</fullName>
            </value>
            <value>
                <fullName>Find new ways to save</fullName>
            </value>
            <value>
                <fullName>Explore refinancing</fullName>
            </value>
            <value>
                <fullName>Help with my application</fullName>
            </value>
            <value>
                <fullName>Pay my loan down sooner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>